src/objects/agf__QA_ExecutionBug__c.object
<CustomObject>
    <description>Join object between Test Executions and Bugs</description>
    <fields>
        <fullName>agf__Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution</label>
        <referenceTo>agf__QA_Test_Execution__c</referenceTo>
        <relationshipLabel>Execution-Bugs</relationshipLabel>
        <relationshipName>Execution_Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Execution-Bugs</relationshipLabel>
        <relationshipName>Execution_Bugs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Execution-Bug</label>
    <nameField>
        <displayFormat>TEB-{00000}</displayFormat>
        <label>Execution-Bug #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution-Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Execution_cannot_be_null</fullName>
        <active>true</active>
        <description>Execution cannot be null</description>
        <errorConditionFormula>ISNULL( agf__Execution__c )</errorConditionFormula>
        <errorDisplayField>agf__Execution__c</errorDisplayField>
        <errorMessage>Execution cannot be null</errorMessage>
    </validationRules>
</CustomObject>